@@ -10,32 +10,6 @@
   <display-name>JAMWiki tag library</display-name>
   <description>JAMWiki Tag Library</description>
   <tag>
-    <name>encode</name>
-    <tag-class>org.jamwiki.tags.EncodeTag</tag-class>
-    <body-content>empty</body-content>
-    <attribute>
-      <name>value</name>
-      <required>true</required>
-    </attribute>
-    <attribute>
-      <name>var</name>
-      <required>false</required>
-    </attribute>
-  </tag>
-  <tag>
-    <name>decode</name>
-    <tag-class>org.jamwiki.tags.DecodeTag</tag-class>
-    <body-content>JSP</body-content>
-    <attribute>
-      <name>value</name>
-      <required>true</required>
-    </attribute>
-    <attribute>
-      <name>var</name>
-      <required>false</required>
-    </attribute>
-  </tag>
-  <tag>
     <name>wiki-version</name>
     <tag-class>org.jamwiki.tags.WikiVersionTag</tag-class>
     <body-content>empty</body-content>
